# serverapp

./: .gitignore  .gitignore~  .travis.yml  .travis.yml~  CMakeLists.txt  Dockerfile  DockerfileBase  Doxyfile  Makefile  README.md  log4cpp.properties
AppServer/cmake/: .gitignore  CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  log4cpp.properties
AppServer/cmake/Testing/Temporary/: CTestCostData.txt
AppServer/cmake/modules/: FindSnappy.cmake
AppServer/test/: .gitignore  AuthenticationControllerTest.cc  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  CMakeLists.txt~  CTestTestfile.cmake  Makefile  MockABMUserCtrl.cc  MockABMUsersService.cc  MockAuthenticationController.cc  MockAuthenticationController.cpp  MockAuthenticationCtrl.cc  MockAuthenticationService.cc  MockChatCtrl.cc  MockChatService.cc  MockMatchCtrl.cc  MockMatchService.cc  MockRemoteSharedService.cc  MockSearchCandidatesCtrl.cc  MockSearchCandidatesService.cc  authentication_user.py  authenticationctrltest  cmake_install.cmake  is_session_valid.py  new_user.py  readme.txt  sample1_unittest  testsappserver
AppServer/test/Testing/Temporary/: CTestCostData.txt
AppServer/test/cmake/: .gitignore  AuthenticationControllerTest  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  internal_utils.cmake
AppServer/test/cmake/Testing/Temporary/: CTestCostData.txt
AppServer/test/coverageReport/: index-sort-f.html  index-sort-l.html  index.html
AppServer/test/coverageReport/src/: index-detail-sort-f.html  index-detail-sort-l.html  index-detail.html  index-sort-f.html  index-sort-l.html  index.html  jsoncpp.cpp.func-sort-c.html  jsoncpp.cpp.func.html  jsoncpp.cpp.gcov.html
AppServer/test/coverageReport/src/controller/: AbmUserController.cpp.func-sort-c.html  AbmUserController.cpp.func.html  AbmUserController.cpp.gcov.html  AbstractController.h.func-sort-c.html  AbstractController.h.func.html  AbstractController.h.gcov.html  AuthenticationController.cpp.func-sort-c.html  AuthenticationController.cpp.func.html  AuthenticationController.cpp.gcov.html  FactoryController.cpp.func-sort-c.html  FactoryController.cpp.func.html  FactoryController.cpp.gcov.html  MatchController.cpp.func-sort-c.html  MatchController.cpp.func.html  MatchController.cpp.gcov.html  index-detail-sort-f.html  index-detail-sort-l.html  index-detail.html  index-sort-f.html  index-sort-l.html  index.html
AppServer/test/coverageReport/src/dao/: ChatDao.cpp.func-sort-c.html  ChatDao.cpp.func.html  ChatDao.cpp.gcov.html  GenericDao.h.func-sort-c.html  GenericDao.h.func.html  GenericDao.h.gcov.html  IUserDao.h.func-sort-c.html  IUserDao.h.func.html  IUserDao.h.gcov.html  MatchDao.cpp.func-sort-c.html  MatchDao.cpp.func.html  MatchDao.cpp.gcov.html  MatchDao.h.func-sort-c.html  MatchDao.h.func.html  MatchDao.h.gcov.html  UserDao.cpp.func-sort-c.html  UserDao.cpp.func.html  UserDao.cpp.gcov.html  UserDao.h.func-sort-c.html  UserDao.h.func.html  UserDao.h.gcov.html  index-detail-sort-f.html  index-detail-sort-l.html  index-detail.html  index-sort-f.html  index-sort-l.html  index.html
AppServer/test/coverageReport/src/exception/: EntityNotFoundException.h.func-sort-c.html  EntityNotFoundException.h.func.html  EntityNotFoundException.h.gcov.html  IllegalStateException.h.func-sort-c.html  IllegalStateException.h.func.html  IllegalStateException.h.gcov.html  IncorrectPasswordException.h.func-sort-c.html  IncorrectPasswordException.h.func.html  IncorrectPasswordException.h.gcov.html  InvalidEntityException.h.func-sort-c.html  InvalidEntityException.h.func.html  InvalidEntityException.h.gcov.html  JsonParseException.h.func-sort-c.html  JsonParseException.h.func.html  JsonParseException.h.gcov.html  TokenException.h.func-sort-c.html  TokenException.h.func.html  TokenException.h.gcov.html  WriteDbException.h.func-sort-c.html  WriteDbException.h.func.html  WriteDbException.h.gcov.html  index-detail-sort-f.html  index-detail-sort-l.html  index-detail.html  index-sort-f.html  index-sort-l.html  index.html
AppServer/test/coverageReport/src/json/: index-detail-sort-f.html  index-detail-sort-l.html  index-detail.html  index-sort-f.html  index-sort-l.html  index.html  json.h.func-sort-c.html  json.h.func.html  json.h.gcov.html
AppServer/test/coverageReport/src/model/: Chat.cpp.func-sort-c.html  Chat.cpp.func.html  Chat.cpp.gcov.html  Entity.h.func-sort-c.html  Entity.h.func.html  Entity.h.gcov.html  Interest.cpp.func-sort-c.html  Interest.cpp.func.html  Interest.cpp.gcov.html  Location.cpp.func-sort-c.html  Location.cpp.func.html  Location.cpp.gcov.html  Match.cpp.func-sort-c.html  Match.cpp.func.html  Match.cpp.gcov.html  Match.h.func-sort-c.html  Match.h.func.html  Match.h.gcov.html  NewMatchesResponse.cpp.func-sort-c.html  NewMatchesResponse.cpp.func.html  NewMatchesResponse.cpp.gcov.html  UserProfile.cpp.func-sort-c.html  UserProfile.cpp.func.html  UserProfile.cpp.gcov.html  UserProfile.h.func-sort-c.html  UserProfile.h.func.html  UserProfile.h.gcov.html  index-detail-sort-f.html  index-detail-sort-l.html  index-detail.html  index-sort-f.html  index-sort-l.html  index.html
AppServer/test/coverageReport/src/service/: AbmUserService.cpp.func-sort-c.html  AbmUserService.cpp.func.html  (+13 more)
AppServer/test/coverageReport/test/: MockAuthenticationController.cc.func-sort-c.html  MockAuthenticationController.cc.func.html  MockAuthenticationController.cc.gcov.html  index-detail-sort-f.html  index-detail-sort-l.html  index-detail.html  index-sort-f.html  index-sort-l.html  index.html
AppServer/test/include/gtest/: gtest-param-test.h.pump  gtest.h
AppServer/test/include/src/: gtest-all.cc  gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest-printers.cc  gtest-test-part.cc  gtest-typed-test.cc  gtest.cc  gtest_main.cc
AppServer/test/servicespy/: all_messages.py  candidates.py  confirm_match.py  generate_users.py  get_chats.py  get_photo.py  login_user.py  match_no.py  match_yes.py  new_match.py  new_messages.py  newuser.py  post_message.py  update_lastseen.py  updateuser.py  valid_session.py
(+344 files in other folders)
